# goit-ds-hw-01

./: Dockerfile  main.py  pyproject.toml
