[tool.poetry]
name = "poetrytest"
version = "0.1.0"
description = ""
authors = ["Olga Troino <otronity@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
